deploy/namespaces/airflow/istio/01-peerauthentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: airflow
spec:
  mtls:
    mode: STRICT
