deploy/namespaces/airflow/istio/05b-dr-postgresql-exporter-istio-mutual.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-postgresql-exporter-istio-mutual
  namespace: airflow
spec:
  host: airflow-postgres-exporter.airflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
