deploy/namespaces/airflow/istio/08-kube-api-disable-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kube-api-disable-mtls
  namespace: airflow
spec:
  host: kubernetes.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
