deploy/namespaces/airflow/istio/04-airflow-ui-allow-lan.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-airflow-ui-from-pods
  namespace: airflow
spec:
  selector:
    matchLabels:
      component: api-server     
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks:
        - 10.42.0.0/16        
        - 192.168.180.0/24    
    to:
    - operation:
        ports: ["8080"]
