deploy/namespaces/airflow/istio/06-authz-airflow-allow-namespace.yaml
# airflow-allow-namespace-patch.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: airflow-allow-namespace
  namespace: airflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - airflow
        - monitoring
        - pg-backups
