deploy/namespaces/airflow/istio/07-authz-allow-postgres.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-postgres
  namespace: airflow
spec:
  selector:
    matchLabels:
      app: airflow-postgresql
  rules:
  - from:
    - source:
        namespaces: ["airflow"]
