deploy/namespaces/airflow/istio/10-allow-prometheus-monitoring.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-monitoring-namespace
  namespace: airflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["monitoring"]
